--- a/04.Functions/3.Callback.html
+++ b/04.Functions/3.Callback.html
@@ -3,7 +3,7 @@
 
     [DATE]: 22-02-2024
 
-    [DESCRIPTION]: Callaback => Example a callback
+    [DESCRIPTION]: Callaback => Example of callback
 -->
 <!DOCTYPE html>
 <html lang="en">
