Split js and html files

--- a/01.Introduction/1.Declaration&Types.html
+++ b/01.Introduction/1.Declaration&Types.html
@@ -13,34 +13,6 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-        // Declaration: Let
-        let data = 5
-        console.log(data)
-
-        // Assignation
-        data = 3
-        console.log(data)
-
-        // Types: Number, String, Boolean, undefined
-        // Number
-        let myNumber = 1
-        console.log(typeof myNumber)
-
-        // String
-        let myString = "Hello world"
-        console.log(typeof myString)
-
-        // Boolean
-        let myBoolean = true
-        console.log(typeof myBoolean)
-
-        // Undefined
-        let undefinedCase
-        console.log(typeof undefinedCase)
-
-    </script>
+    <script src="1.Declaration&Types.js" defer></script>
 </body>
 </html>
-
