--- a/02.Operators/2.Comparison.html
+++ b/02.Operators/2.Comparison.html
@@ -13,16 +13,6 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-        // Comparison: value and type
-        // Value (==)
-        console.log(3 == "3") // true
-        
-        // Value & type (===)
-        console.log(3 === "3") // false       
-    
-    </script>
+    <script src="2.Comparison.js" defer></script>
 </body>
 </html>
-
