--- a/03.Conditionals/1.If-else.html
+++ b/03.Conditionals/1.If-else.html
@@ -13,22 +13,6 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-        let currentDate = new Date();
-        let weekDay = currentDate.getDay();
-   
-        console.log("Today is: " + currentDate.toLocaleString("en-us", {  weekday: "long" }));
-
-        if (weekDay > 0 && weekDay < 5) {
-            console.log("Day type: Work-Day")
-        } else if(weekDay === 5){
-            console.log("Day type: Friday!")
-        } else {
-            console.log("Day type: Weekend!")
-        }
-
-    </script>
+    <script src="1.If-else.js" defer></script>
 </body>
 </html>
-
