--- a/03.Conditionals/2.Switch-case.html
+++ b/03.Conditionals/2.Switch-case.html
@@ -13,29 +13,6 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-        let currentDate = new Date();
-        let weekDay = currentDate.getDay();
-    
-        console.log("Today is: " + currentDate.toLocaleString("en-us", {  weekday: "long" }));
-    
-        switch (weekDay) {
-            case 0: // (Sunday) - Continues because has not break;
-            case 6:
-                console.log("Day type: Weekend!");
-                break;
-
-            case 5:
-                console.log("Day type: Friday!");
-                break;
-
-            default:
-                console.log("Day type: Work-Day");
-                break;
-        }
-
-    </script>
+    <script src="2.Switch-case.js" defer></script>
 </body>
 </html>
-
