--- a/03.Conditionals/3.Ternary.html
+++ b/03.Conditionals/3.Ternary.html
@@ -13,21 +13,6 @@
     <title>Basics JavaScript</title>
   </head>
   <body>
-    <script>
-
-        function getFinalPrice(isVIP) {
-        return isVIP ? '$2.00' : '$10.00';
-        }
-
-        console.log(getFinalPrice(true));
-        // Expected output: "$2.00"
-
-        console.log(getFinalPrice(false));
-        // Expected output: "$10.00"
-
-        console.log(getFinalPrice(null));
-        // Expected output: "$10.00"
-
-    </script>
+    <script src="3.Ternary.js" defer></script>
   </body>
 </html>
