--- a/04.Functions/1.Function.html
+++ b/04.Functions/1.Function.html
@@ -13,17 +13,7 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-    function greeting(name = "byDefault") {
-        return `Hello ${name}!`;
-        // return "Hello" + name + "!"; --> Classic/old mode.
-    }
-
-    console.log(greeting("Marc"));
-    console.log(greeting()); // --> byDefault
-
-    </script>
+    <script src="1.Function.js" defer></script>
 </body>
 </html>
 
