--- a/04.Functions/2.Arrow-Function.html
+++ b/04.Functions/2.Arrow-Function.html
@@ -13,13 +13,7 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-    greeting((name = "ByDefault") => `Hello ${name}!`)
-    console.log(greeting("Marc"));
-    console.log(greeting()); // --> byDefault
-
-    </script>
+    <script src="2.Arrow-Function.js" defer></script>
 </body>
 </html>
 
