--- a/06.Loops/1.While.html
+++ b/06.Loops/1.While.html
@@ -13,20 +13,7 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-    function loopWhile(num) {
-        let i = 0;
-
-        while (i < num) {
-            console.log(i);
-            i++;
-        }
-    }
-
-    loopWhile(11);
-
-    </script>
+    <script src="1.While.js" defer></script>
 </body>
 </html>
 
