--- a/06.Loops/2.Do-while.html
+++ b/06.Loops/2.Do-while.html
@@ -13,20 +13,7 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-    function loopDoWhile(num) {
-        let i = 0;
-
-        do {
-            console.log(i);
-            i++;
-        } while (i < num)
-    }
-
-    loopDoWhile(11);
-
-    </script>
+    <script src="2.Do-while.js" defer></script>
 </body>
 </html>
 
