--- a/06.Loops/5.ForEach.html
+++ b/06.Loops/5.ForEach.html
@@ -13,20 +13,6 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-    const myArray = ["Blue", "Red", "Green", "Black"];
-    
-    // Old mode
-    myArray.forEach(function(item, index) {
-        console.log(`Item: ${item}, index: ${index}`);
-    })
-
-    // New mode (arrow function)
-    myArray.forEach((item, index) => {
-        console.log(`Item: ${item}, index: ${index}`);
-    })
-
-    </script>
+    <script src="5.ForEach.js" defer></script>
 </body>
 </html>
