--- a/06.Loops/6.ForEach-object.html
+++ b/06.Loops/6.ForEach-object.html
@@ -13,27 +13,6 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-    const book = {
-        title: "To Kill a Mockingbird",
-        author: "Harper Lee",
-        release: "11-07-1960"
-    }
-
-    // 1. forEach using Object methods
-    const properties = Object.getOwnPropertyNames(book);
-
-    properties.forEach(name => {
-        let value = Object.getOwnPropertyDescriptor(book, name).value;
-        console.log(`1. The property "${name}" contains "${value}"`);
-    })
-
-    // 2. for (key in object)
-    for (property in book){
-        console.log(`2. The property "${property}" contains "${book[property]}"`);
-    }
-
-    </script>
+    <script src="6.ForEach-object.js" defer></script>
 </body>
 </html>
