--- a/02.Operators/1.Arithmetic.html
+++ b/02.Operators/1.Arithmetic.html
@@ -14,62 +14,6 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-        // Addition
-        let addition = 5 + 5
-        console.log(addition)
-
-        // Subtraction
-        let subtraction = 5 - 5
-        console.log(subtraction)
-
-        // Division
-        let division = 5 / 5
-        console.log(division)
-
-        // Infinity        
-        let divisionInfinity = 5 / 0
-        console.log(divisionInfinity)
-
-        // Multiplication
-        let multiplication = 5 * 5
-        console.log(multiplication)
-
-        // Power
-        let power = 5 ** 5
-        console.log(power)
-
-        // Increment and decrement (PRE & POST)
-        // Increment: 
-        let x = 1;
-        let y = 1;
-        let z;
-        console.log(x, y, z);
-
-        // Pre-Increment
-        z = ++x; // z = 2
-        console.log(z);
-
-        // Post-Increment
-        z = y++; // z = 1
-        console.log(z);
-
-        // Decrement: 
-        x = 2;
-        y = 2;
-        z = undefined;
-        console.log(x, y, z);
-
-        // Pre-Decrement
-        z = --x; // z = 1
-        console.log(z);
-
-        // Post-Decrement
-        z = y--; // z = 2
-        console.log(z);
-
-    </script>
+    <script src="1.Arithmetic.js" defer></script>
 </body>
 </html>
-
