--- a/05.Classes/2.New-mode.html
+++ b/05.Classes/2.New-mode.html
@@ -13,43 +13,7 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-    // Class
-    class Inventory {
-        constructor(name){
-            this.name = name;
-            this.articles = [];
-        }
-
-        // Methods
-        getName() {
-            return this.name;
-        }
-
-        add(item, quantity) {
-            return this.articles[item] = quantity;
-        }
-
-        quantity(item) {
-            return this.articles[item];
-        }
-    }
-
-
-    // Create objects and play with methods
-    let books = new Inventory('books');
-
-    const myBook = {
-        title: "My new book",
-        quantity: 5
-    }
-
-    console.log(books.getName());
-    console.log(books.add(myBook.title, myBook.quantity));
-    console.log(books.quantity(myBook.title));
-
-    </script>
+    <script src="2.New-mode.js" defer></script>
 </body>
 </html>
 
