--- a/06.Loops/3.For.html
+++ b/06.Loops/3.For.html
@@ -13,17 +13,7 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-    
-    function loopFor(num) {
-        for (let i = 0; i <num; i++) {
-            console.log(i);
-        }
-    }
-    
-    loopFor(11);
-
-    </script>
+    <script src="3.For.js" defer></script>
 </body>
 </html>
 
