--- a/06.Loops/4.Good-bad-performance.html
+++ b/06.Loops/4.Good-bad-performance.html
@@ -13,33 +13,7 @@
     <title>Basics JavaScript</title>
 </head>
 <body>
-    <script>
-
-    const obj = {
-        unArray: new Array(10000000)
-    }
-    
-    function badPerformance() {
-        console.time("Bad");
-        for(let i = 0; i < obj.unArray.length; i++){
-            obj.unArray[i] = "Hola";
-        }
-        console.timeEnd("Bad");
-    }
-
-    function goodPerformance() {
-        console.time("Good");
-        let unArray = obj.unArray;
-        for (let i = 0, len = unArray.length; i < len; i++) {
-            unArray[i] = "Hola";
-        }
-        console.timeEnd("Good");
-    }
-
-    badPerformance();  // 60.095947265625 ms
-    goodPerformance(); // 86.183837890625 ms
-    
-    </script>
+    <script src="4.Good-bad-performance.js" defer></script>
 </body>
 </html>
 
