--- a/09.Closures/1.Closure.html
+++ b/09.Closures/1.Closure.html
@@ -13,38 +13,6 @@
     <title>Basics JavaScript</title>
   </head>
   <body>
-    <script>
-      
-      const myCounter = (function() {
-        let _counter = 0;
-
-        function increment() {
-          return ++_counter;
-        }
-
-        function decrement() {
-          return --_counter;
-        }
-
-        function value() {
-          return _counter;
-        }
-
-        return {
-          increment,
-          decrement,
-          value
-        }
-      })();
-
-      console.log(myCounter.value())      // counter = 0
-      console.log(myCounter.increment())  // counter = 1
-      console.log(myCounter.value())      // counter = 1
-      console.log(myCounter.increment())  // counter = 2
-      console.log(myCounter.value())      // counter = 2
-      console.log(myCounter.decrement())  // counter = 1
-      console.log(myCounter.value())      // counter = 1
-
-    </script>
+    <script src="1.Closure.js" defer></script>
   </body>
 </html>
