Add more closure examples

--- a/09.Closures/3.Closure.html
+++ b/09.Closures/3.Closure.html
@@ -3,7 +3,7 @@
 
     [DATE]: 21-02-2024
 
-    [DESCRIPTION]: Closure => Example 1: Counter (increment, decrement and value)
+    [DESCRIPTION]: Closure => Example 3: Addition
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -13,6 +13,6 @@
     <title>Basics JavaScript</title>
   </head>
   <body>
-    <script src="1.Closure.js" defer></script>
+    <script src="3.Closure.js" defer></script>
   </body>
 </html>
