Add Handling objects as arrays

--- a/08.Arrays/7.Object-to-array.html
+++ b/08.Arrays/7.Object-to-array.html
@@ -13,6 +13,6 @@
     <title>Basics JavaScript</title>
   </head>
   <body>
-    <script src="7.object-to-array.js" defer></script>
+    <script src="7.Object-to-array.js" defer></script>
   </body>
 </html>
