Add Destructuring example

--- a/07.Core_classes/1.Object.html
+++ b/07.Core_classes/1.Object.html
@@ -3,7 +3,7 @@
 
     [DATE]: 19-02-2024
 
-    [DESCRIPTION]: Objects => It manages objects (access, modify, comparison, etc)
+    [DESCRIPTION]: Objects => It manages objects (access, modify, comparison, optional chaining, destructuring, etc)
 -->
 <!DOCTYPE html>
 <html lang="en">
